@@ -714,7 +714,7 @@ public class RestUtilsTest {
     }
 
     @Test
-    public void testcreateAndStoreSchoolReports_0() {
+    public void testCreateAndStoreSchoolReports_0() {
         final String type = "NONGRADPRJ";
 
         when(this.restService.post(String.format(constants.getCreateAndStoreSchoolReports(),type), new ArrayList<>(), Integer.class)).thenReturn(0);
@@ -725,28 +725,59 @@ public class RestUtilsTest {
         assertNotNull(type);
         assertNotNull(result);
     }
-    @Test
-    public void whenCreateAndStoreSchoolReports_WithParams_ThenReturnResult() {
-        final String type = "TVRRUN";
 
-        when(this.restService.post(String.format(constants.getCreateAndStoreSchoolReports(),type), List.of("12345"), Integer.class)).thenReturn(2);
+    @Test
+    public void testCreateAndStoreSchoolReports_WithParams_ThenReturnResult() {
+        final String type = "NONGRADPRJ";
+        final UUID schoolId = UUID.randomUUID();
+
+        when(this.restService.post(String.format(constants.getCreateAndStoreSchoolReports(),type), List.of(schoolId), Integer.class)).thenReturn(2);
         when(LOGGER.isDebugEnabled()).thenReturn(true);
 
         mockTokenResponseObject();
 
-        var result = this.restUtils.createAndStoreSchoolReports("12345", type, new SchoolReportsRegenSummaryDTO());
+        var result = this.restUtils.createAndStoreSchoolReports(List.of(schoolId),type);
         assertNotNull(type);
         assertNotNull(result);
     }
 
-    @Test(expected = Exception.class)
-    public void whenCreateAndStoreSchoolReports_WithParams_ThenThrowException() {
+    @Test
+    public void whenCreateAndStoreSchoolReports_WithParams_ThenReturnResult() {
         final String type = "TVRRUN";
+        final UUID schoolId = UUID.randomUUID();
 
-        when(this.restService.post(String.format(constants.getCreateAndStoreSchoolReports(),type), List.of("12345"), Integer.class, "accessToken")).thenThrow(Exception.class);
+        when(this.restService.post(String.format(constants.getCreateAndStoreSchoolReports(),type), List.of(schoolId), Integer.class)).thenReturn(2);
         when(LOGGER.isDebugEnabled()).thenReturn(true);
 
-        var result = this.restUtils.createAndStoreSchoolReports("12345", type, new SchoolReportsRegenSummaryDTO());
+        mockTokenResponseObject();
+
+        var result = this.restUtils.createAndStoreSchoolReports(schoolId, type, new SchoolReportsRegenSummaryDTO());
+        assertNotNull(type);
+        assertNotNull(result);
+    }
+
+    @Test
+    public void whenCreateAndStoreSchoolReports_WithParams_ThenReturnsEmptyList() {
+        final String type = "TVRRUN";
+
+        when(LOGGER.isDebugEnabled()).thenReturn(true);
+
+        var result = this.restUtils.createAndStoreSchoolReports(null, type, new SchoolReportsRegenSummaryDTO());
+        assertThat(result).isZero();
+    }
+
+    @Test
+    public void whenCreateAndStoreSchoolReports_WithParams_ThenThrowException() {
+        final String type = "TVRRUN";
+        final UUID schoolId = UUID.randomUUID();
+
+        SchoolReportsRegenSummaryDTO summaryDTO = new SchoolReportsRegenSummaryDTO();
+
+        when(this.restService.post(String.format(constants.getCreateAndStoreSchoolReports(),type), List.of(schoolId), Integer.class)).thenThrow(RuntimeException.class);
+        when(LOGGER.isDebugEnabled()).thenReturn(true);
+
+        val result = this.restUtils.createAndStoreSchoolReports(schoolId, type, summaryDTO);
+        assertThat(result).isZero();
     }
 
     @Test
@@ -767,7 +798,7 @@ public class RestUtilsTest {
         assertThat(result).hasSize(1);
     }
 
-    @Test(expected = Exception.class)
+    @Test
     public void whenGetSchoolReportsLiteByReportType_ThenThrowException() {
         UUID uuid = UUID.randomUUID();
         SchoolReport sr = new SchoolReport();
@@ -778,10 +809,11 @@ public class RestUtilsTest {
 
         mockTokenResponseObject();
 
-        when(this.restService.get(String.format(constants.getSchoolReportsLiteByReportTypeUrl(), "GRADREG"), List.class, "accessToken")).thenThrow(Exception.class);
+        when(this.restService.get(String.format(constants.getSchoolReportsLiteByReportTypeUrl(), "GRADREG"), List.class)).thenThrow(new RuntimeException("Test Exception"));
         when(LOGGER.isDebugEnabled()).thenReturn(true);
 
         val result = this.restUtils.getSchoolReportsLiteByReportType("GRADREG", new SchoolReportsRegenSummaryDTO());
+        assertThat(result).isEmpty();
     }
 
     @Test
@@ -875,8 +907,9 @@ public class RestUtilsTest {
     @Test
     public void testGetStudentForBatchInput() {
         final String mincode = "123213123";
+        final UUID schoolId = UUID.randomUUID();
         final UUID studentID = UUID.randomUUID();
-        BatchGraduationStudentRecord grd = new BatchGraduationStudentRecord(studentID, "2018-EN", null, "1234567");
+        BatchGraduationStudentRecord grd = new BatchGraduationStudentRecord(studentID, "2018-EN", null, mincode, schoolId);
 
         when(this.restService.get(String.format(constants.getGradStudentApiGradStatusForBatchUrl(), studentID), BatchGraduationStudentRecord.class)).thenReturn(grd);
 
@@ -890,7 +923,8 @@ public class RestUtilsTest {
     @Test
     public void testGetStudentForBatchInput_When_APIisDown_returns_null() {
         final UUID studentID = UUID.randomUUID();
-        BatchGraduationStudentRecord grd = new BatchGraduationStudentRecord(studentID, "2018-EN", null, "1234567");
+        final UUID schoolId = UUID.randomUUID();
+        BatchGraduationStudentRecord grd = new BatchGraduationStudentRecord(studentID, "2018-EN", null, "1234567", schoolId);
 
         when(this.restService.get(String.format(constants.getGradStudentApiGradStatusForBatchUrl(), studentID), BatchGraduationStudentRecord.class)).thenReturn(grd);
 
@@ -937,12 +971,13 @@ public class RestUtilsTest {
     @Test
     public void testGetStudentsForUserReqDisRun() {
         String credentialType = "OT";
+        UUID schoolId = UUID.randomUUID();
         StudentSearchRequest req = new StudentSearchRequest();
-        List<String> sch = Arrays.asList("43224223");
-        req.setSchoolOfRecords(sch);
+        List<UUID> sch = List.of(schoolId);
+        req.setSchoolIds(sch);
         List<StudentCredentialDistribution> scdList = new ArrayList<>();
         StudentCredentialDistribution scd = new StudentCredentialDistribution();
-        scd.setSchoolOfRecord("1212211");
+        scd.setSchoolId(schoolId);
         scd.setPaperType("YED2");
         scd.setCredentialTypeCode("E");
         scd.setId(new UUID(1,1));
@@ -1096,35 +1131,108 @@ public class RestUtilsTest {
     }
 
     @Test
-    public void testGetDistrictBySchoolCategoryCode() {
-        District district = new District();
+    public void testGetDistrictsBySchoolCategoryCode() {
+        ca.bc.gov.educ.api.batchgraduation.model.institute.District district = new ca.bc.gov.educ.api.batchgraduation.model.institute.District();
+        district.setDistrictId(UUID.randomUUID().toString());
         district.setDistrictNumber("042");
 
-        when(this.restService.get(String.format(constants.getTraxDistrictBySchoolCategory(), "02"), List.class)).thenReturn(List.of(district));
+        when(this.restService.get(String.format(constants.getDistricstBySchoolCategory(), "02"), List.class)).thenReturn(List.of(district));
 
-        List<District> res = this.restUtils.getDistrictBySchoolCategoryCode("02");
+        List<ca.bc.gov.educ.api.batchgraduation.model.institute.District> res = this.restUtils.getDistrictsBySchoolCategoryCode("02");
         assertThat(res).isNotNull();
     }
 
     @Test
-    public void testGetSchoolBySchoolCategoryCode() {
-        School school = new School();
+    public void testGetDistrictsBySchoolCategoryCode_whenException_isThrown() {
+        when(this.restService.get(String.format(constants.getDistricstBySchoolCategory(), "02"), List.class)).thenThrow(new RuntimeException("Test Exception"));
+
+        List<ca.bc.gov.educ.api.batchgraduation.model.institute.District> res = this.restUtils.getDistrictsBySchoolCategoryCode("02");
+        assertThat(res).isEmpty();
+    }
+
+    @Test
+    public void testGetSchoolsBySchoolCategoryCode() {
+        ca.bc.gov.educ.api.batchgraduation.model.institute.School school = new ca.bc.gov.educ.api.batchgraduation.model.institute.School();
+        school.setSchoolId(UUID.randomUUID().toString());
+        school.setDistrictId(UUID.randomUUID().toString());
         school.setMincode("1234567");
 
-        when(this.restService.get(String.format(constants.getTraxSchoolBySchoolCategory(), "02"), List.class)).thenReturn(List.of(school));
+        when(this.restService.get(String.format(constants.getSchoolsBySchoolCategory(), "02"), List.class)).thenReturn(List.of(school));
 
-        List<School> res = this.restUtils.getSchoolBySchoolCategoryCode("02");
+        List<ca.bc.gov.educ.api.batchgraduation.model.institute.School> res = this.restUtils.getSchoolsBySchoolCategoryCode("02");
         assertThat(res).isNotNull();
     }
 
     @Test
-    public void testGetSchoolByDistrictCode() {
+    public void testGetSchoolsBySchoolCategoryCode_whenException_isThrown() {
+        when(this.restService.get(String.format(constants.getSchoolsBySchoolCategory(), "02"), List.class)).thenThrow(new RuntimeException("Test Exception"));
+
+        List<ca.bc.gov.educ.api.batchgraduation.model.institute.School> res = this.restUtils.getSchoolsBySchoolCategoryCode("02");
+        assertThat(res).isEmpty();
+    }
+
+    @Test
+    public void testSearchSchoolsByDistrictId() {
+        UUID schoolId = UUID.randomUUID();
+        UUID districtId = UUID.randomUUID();
+
+        ca.bc.gov.educ.api.batchgraduation.model.institute.School school = new ca.bc.gov.educ.api.batchgraduation.model.institute.School();
+        school.setSchoolId(schoolId.toString());
+        school.setDistrictId(districtId.toString());
+        school.setMincode("1234567");
+
+        when(this.restService.get(String.format(constants.getSearchSchoolsByDistrictId(), districtId), List.class)).thenReturn(List.of(school));
+
+        List<ca.bc.gov.educ.api.batchgraduation.model.institute.School> res = this.restUtils.getSchoolsByDistrictId(districtId);
+        assertThat(res).isNotNull();
+    }
+
+    @Test
+    public void testSearchSchoolsByDistrictId_whenException_isThrown() {
+        UUID districtId = UUID.randomUUID();
+        when(this.restService.get(String.format(constants.getSearchSchoolsByDistrictId(), districtId), List.class)).thenThrow(new RuntimeException("Test Exception"));
+
+        List<ca.bc.gov.educ.api.batchgraduation.model.institute.School> res = this.restUtils.getSchoolsByDistrictId(districtId);
+        assertThat(res).isEmpty();
+    }
+
+    @Test
+    public void testSearchSchoolsByDistrictNumber() {
+        UUID schoolId = UUID.randomUUID();
+        UUID districtId = UUID.randomUUID();
+        String districtNumber = "039";
+
+        ca.bc.gov.educ.api.batchgraduation.model.institute.School school = new ca.bc.gov.educ.api.batchgraduation.model.institute.School();
+        school.setSchoolId(schoolId.toString());
+        school.setDistrictId(districtId.toString());
+        school.setMincode("1234567");
+
+        when(this.restService.get(String.format(constants.getSearchSchoolsByDistrictNumber(), districtNumber), List.class)).thenReturn(List.of(school));
+
+        List<ca.bc.gov.educ.api.batchgraduation.model.institute.School> res = this.restUtils.getSchoolsByDistrictNumber(districtNumber);
+        assertThat(res).isNotNull();
+    }
+
+    @Test
+    public void testSearchSchoolsByDistrictNumber_whenException_isThrown() {
+        String districtNumber = "039";
+        when(this.restService.get(String.format(constants.getSearchSchoolsByDistrictNumber(), districtNumber), List.class)).thenThrow(new RuntimeException("Test Exception"));
+
+        List<ca.bc.gov.educ.api.batchgraduation.model.institute.School> res = this.restUtils.getSchoolsByDistrictNumber(districtNumber);
+        assertThat(res).isEmpty();
+    }
+
+    @Test
+    public void testGetSchoolClob() {
+        UUID schoolId = UUID.randomUUID();
+
         SchoolClob school = new SchoolClob();
+        school.setSchoolId(schoolId.toString());
         school.setMinCode("1234567");
 
-        when(this.restService.get(String.format(constants.getSchoolsByDistrictNumber(), "005"), List.class)).thenReturn(List.of(school));
+        when(this.restService.get(String.format(constants.getSchoolClobBySchoolId(), schoolId), SchoolClob.class)).thenReturn(school);
 
-        List<SchoolClob> res = this.restUtils.getSchoolByDistrictCode("005");
+        val res = this.restUtils.getSchoolClob(schoolId.toString());
         assertThat(res).isNotNull();
     }
 
@@ -1363,13 +1471,31 @@ public class RestUtilsTest {
 
     @Test
     public void testGetTotalSchoolReportsForArchiving() {
-        List<String> schools = Arrays.asList("12345678","11223344");
+        UUID schoolId1 = UUID.randomUUID();
+        UUID schoolId2 = UUID.randomUUID();
+        List<UUID> schools = Arrays.asList(schoolId1, schoolId2);
 
         mockTokenResponseObject();
 
-        when(this.restService.post(String.format(constants.getGradSchoolReportsCountUrl(), "GRADREG"), schools, Long.class, "accessToken")).thenReturn(1L);
+        when(this.restService.post(String.format(constants.getGradSchoolReportsCountUrl(), "GRADREG"), schools, Long.class)).thenReturn(1L);
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
+
+        val result = this.restUtils.getTotalReportsForProcessing(schools, "GRADREG", summaryDTO);
+        assertThat(result).isEqualTo(1);
+    }
+
+    @Test
+    public void testGetTotalSchoolReportsRegeneration() {
+        UUID schoolId1 = UUID.randomUUID();
+        UUID schoolId2 = UUID.randomUUID();
+        List<UUID> schools = Arrays.asList(schoolId1, schoolId2);
+
+        mockTokenResponseObject();
+
+        when(this.restService.post(String.format(constants.getGradSchoolReportsCountUrl(), "GRADREG"), schools, Long.class)).thenReturn(1L);
+
+        SchoolReportsRegenSummaryDTO summaryDTO = new SchoolReportsRegenSummaryDTO();
 
         val result = this.restUtils.getTotalReportsForProcessing(schools, "GRADREG", summaryDTO);
         assertThat(result).isEqualTo(1);
@@ -1383,7 +1509,7 @@ public class RestUtilsTest {
 
         mockTokenResponseObject();
 
-        when(this.restService.post(String.format(constants.getGradStudentReportsGuidsUrl(), "ACHV", 1), studentIDsIn, List.class, "accessToken")).thenReturn(studentIDsOut);
+        when(this.restService.post(String.format(constants.getGradStudentReportsGuidsUrl(), "ACHV", 1), studentIDsIn, List.class)).thenReturn(studentIDsOut);
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
 
@@ -1399,7 +1525,7 @@ public class RestUtilsTest {
 
         mockTokenResponseObject();
 
-        when(this.restService.post(String.format(constants.getGradStudentReportsGuidsUrl(), "ACHV", 1), studentIDsIn, List.class, "accessToken")).thenThrow(new RuntimeException("Unable to retrieve report student guids"));
+        when(this.restService.post(String.format(constants.getGradStudentReportsGuidsUrl(), "ACHV", 1), studentIDsIn, List.class)).thenThrow(new RuntimeException("Unable to retrieve report student guids"));
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
 
@@ -1417,7 +1543,7 @@ public class RestUtilsTest {
         StudentSearchRequest searchRequest = new StudentSearchRequest();
         searchRequest.setStudentIDs(studentIDs);
 
-        when(this.restService.post(constants.getGradGetStudentsBySearchCriteriaUrl(), searchRequest, List.class, "accessToken")).thenReturn(studentIDs);
+        when(this.restService.post(constants.getGradGetStudentsBySearchCriteriaUrl(), searchRequest, List.class)).thenReturn(studentIDs);
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
 
@@ -1434,7 +1560,7 @@ public class RestUtilsTest {
         StudentSearchRequest searchRequest = new StudentSearchRequest();
         searchRequest.setStudentIDs(studentIDs);
 
-        when(this.restService.post(constants.getGradGetStudentsBySearchCriteriaUrl(), searchRequest, List.class, "accessToken")).thenThrow(new RuntimeException("Unable to retrieve list of Students"));
+        when(this.restService.post(constants.getGradGetStudentsBySearchCriteriaUrl(), searchRequest, List.class)).thenThrow(new RuntimeException("Unable to retrieve list of Students"));
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
 
@@ -1445,13 +1571,32 @@ public class RestUtilsTest {
 
     @Test
     public void testGetTotalSchoolReportsForArchivingError() {
-        List<String> schools = Arrays.asList("12345678","11223344");
+        UUID schoolId1 = UUID.randomUUID();
+        UUID schoolId2 = UUID.randomUUID();
+        List<UUID> schools = Arrays.asList(schoolId1, schoolId2);
 
         mockTokenResponseObject();
 
-        when(this.restService.post(String.format(constants.getGradSchoolReportsCountUrl(), "GRADREG"), schools, Long.class, "accessToken")).thenThrow(new RuntimeException("Unable to retrieve school reports counts"));
+        when(this.restService.post(String.format(constants.getGradSchoolReportsCountUrl(), "GRADREG"), schools, Long.class)).thenThrow(new RuntimeException("Unable to retrieve school reports counts"));
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
+
+        val result = this.restUtils.getTotalReportsForProcessing(schools, "GRADREG", summaryDTO);
+        assertThat(result).isNotNull();
+        assertThat(summaryDTO.getErrors()).isNotEmpty();
+    }
+
+    @Test
+    public void testGetTotalSchoolReportsRegenerationError() {
+        UUID schoolId1 = UUID.randomUUID();
+        UUID schoolId2 = UUID.randomUUID();
+        List<UUID> schools = Arrays.asList(schoolId1, schoolId2);
+
+        mockTokenResponseObject();
+
+        when(this.restService.post(String.format(constants.getGradSchoolReportsCountUrl(), "GRADREG"), schools, Long.class)).thenThrow(new RuntimeException("Unable to retrieve school reports counts"));
+
+        SchoolReportsRegenSummaryDTO summaryDTO = new SchoolReportsRegenSummaryDTO();
 
         val result = this.restUtils.getTotalReportsForProcessing(schools, "GRADREG", summaryDTO);
         assertThat(result).isNotNull();
@@ -1464,7 +1609,7 @@ public class RestUtilsTest {
 
         mockTokenResponseObject();
 
-        when(this.restService.post(String.format(constants.getDeleteStudentReportsUrl(), 12345678L, "ACHV"), studentIDs, Long.class, "accessToken")).thenReturn(1L);
+        when(this.restService.post(String.format(constants.getDeleteStudentReportsUrl(), 12345678L, "ACHV"), studentIDs, Long.class)).thenReturn(1L);
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
 
@@ -1478,7 +1623,7 @@ public class RestUtilsTest {
 
         mockTokenResponseObject();
 
-        when(this.restService.post(String.format(constants.getDeleteStudentReportsUrl(), 12345678L, "ACHV"), studentIDs, Long.class, "accessToken")).thenThrow(new RuntimeException("Unable to delete student reports"));
+        when(this.restService.post(String.format(constants.getDeleteStudentReportsUrl(), 12345678L, "ACHV"), studentIDs, Long.class)).thenThrow(new RuntimeException("Unable to delete student reports"));
 
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
@@ -1490,11 +1635,13 @@ public class RestUtilsTest {
 
     @Test
     public void testArchiveSchoolReports() {
-        List<String> schools = Arrays.asList("12345678","11223344");
+        UUID schoolId1 = UUID.randomUUID();
+        UUID schoolId2 = UUID.randomUUID();
+        List<UUID> schools = Arrays.asList(schoolId1, schoolId2);
 
         mockTokenResponseObject();
 
-        when(this.restService.post(String.format(constants.getGradArchiveSchoolReportsUrl(), 12345678L, "GRADREG"), schools, Integer.class, "accessToken")).thenReturn(1);
+        when(this.restService.post(String.format(constants.getGradArchiveSchoolReportsUrl(), 12345678L, "GRADREG"), schools, Integer.class)).thenReturn(1);
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
 
@@ -1504,11 +1651,13 @@ public class RestUtilsTest {
 
     @Test
     public void testArchiveSchoolReportsError() {
-        List<String> schools = Arrays.asList("12345678","11223344");
+        UUID schoolId1 = UUID.randomUUID();
+        UUID schoolId2 = UUID.randomUUID();
+        List<UUID> schools = Arrays.asList(schoolId1, schoolId2);
 
         mockTokenResponseObject();
 
-        when(this.restService.post(String.format(constants.getGradArchiveSchoolReportsUrl(), 12345678L, "GRADREG"), schools, Integer.class, "accessToken")).thenThrow(new RuntimeException("Unable to archive School Reports"));
+        when(this.restService.post(String.format(constants.getGradArchiveSchoolReportsUrl(), 12345678L, "GRADREG"), schools, Integer.class)).thenThrow(new RuntimeException("Unable to archive School Reports"));
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
 
@@ -1519,43 +1668,49 @@ public class RestUtilsTest {
 
     @Test
     public void testGetTotalStudentsForArchiving() {
-        List<String> schools = Arrays.asList("12345678","11223344");
+        UUID schoolId1 = UUID.randomUUID();
+        UUID schoolId2 = UUID.randomUUID();
+        List<UUID> schools = Arrays.asList(schoolId1, schoolId2);
 
         mockTokenResponseObject();
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
 
-        when(this.restService.post(String.format(constants.getGradStudentCountUrl(), "CUR"), schools, Long.class, "accessToken")).thenReturn(1L);
+        when(this.restService.post(String.format(constants.getGradStudentCountUrl(), "CUR"), schools, Long.class)).thenReturn(1L);
 
-        val result = this.restUtils.getTotalStudentsBySchoolOfRecordAndStudentStatus(schools, "CUR", summaryDTO);
+        val result = this.restUtils.getTotalStudentsBySchoolOfRecordIdAndStudentStatus(schools, "CUR", summaryDTO);
         assertThat(result).isEqualTo(1);
     }
 
     @Test
     public void testGetTotalStudentsForArchivingError() {
-        List<String> schools = Arrays.asList("12345678","11223344");
+        UUID schoolId1 = UUID.randomUUID();
+        UUID schoolId2 = UUID.randomUUID();
+        List<UUID> schools = Arrays.asList(schoolId1, schoolId2);
 
         mockTokenResponseObject();
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
 
-        when(this.restService.post(String.format(constants.getGradStudentCountUrl(), "CUR"), schools, Long.class, "accessToken")).thenThrow(new RuntimeException("Unable to retrieve student counts"));
+        when(this.restService.post(String.format(constants.getGradStudentCountUrl(), "CUR"), schools, Long.class)).thenThrow(new RuntimeException("Unable to retrieve student counts"));
 
-        val result = this.restUtils.getTotalStudentsBySchoolOfRecordAndStudentStatus(schools, "CUR", summaryDTO);
+        val result = this.restUtils.getTotalStudentsBySchoolOfRecordIdAndStudentStatus(schools, "CUR", summaryDTO);
         assertThat(result).isNotNull();
         assertThat(summaryDTO.getErrors()).isNotEmpty();
     }
 
     @Test
     public void testArchiveStudents() {
-        List<String> schools = Arrays.asList("12345678","11223344");
+        UUID schoolId1 = UUID.randomUUID();
+        UUID schoolId2 = UUID.randomUUID();
+        List<UUID> schools = Arrays.asList(schoolId1, schoolId2);
 
         mockTokenResponseObject();
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
         summaryDTO.setUserName("USER");
 
-        when(this.restService.post(String.format(constants.getGradArchiveStudentsUrl(), 12345678L, "CUR", "USER"), schools, Integer.class, "accessToken")).thenReturn(1);
+        when(this.restService.post(String.format(constants.getGradArchiveStudentsUrl(), 12345678L, "CUR", "USER"), schools, Integer.class)).thenReturn(1);
 
         val result = this.restUtils.archiveStudents(12345678L, schools,"CUR", summaryDTO);
         assertThat(result).isEqualTo(1);
@@ -1563,14 +1718,16 @@ public class RestUtilsTest {
 
     @Test
     public void testArchiveStudentsError() {
-        List<String> schools = Arrays.asList("12345678","11223344");
+        UUID schoolId1 = UUID.randomUUID();
+        UUID schoolId2 = UUID.randomUUID();
+        List<UUID> schools = Arrays.asList(schoolId1, schoolId2);
 
         mockTokenResponseObject();
 
         DistributionSummaryDTO summaryDTO = new DistributionSummaryDTO();
         summaryDTO.setUserName("USER");
 
-        when(this.restService.post(String.format(constants.getGradArchiveStudentsUrl(), 12345678L, "CUR", "USER"), schools, Integer.class, "accessToken")).thenThrow(new RuntimeException("Unable to archive Students"));
+        when(this.restService.post(String.format(constants.getGradArchiveStudentsUrl(), 12345678L, "CUR", "USER"), schools, Integer.class)).thenThrow(new RuntimeException("Unable to archive Students"));
 
         val result = this.restUtils.archiveStudents(12345678L, schools,"CUR", summaryDTO);
         assertThat(result).isNotNull();
